# solr-mcp

./: CHANGELOG.md  CLAUDE.md  COMPARISON.md  CREATE_PR.md  Dockerfile  MAKEFILE.md  Makefile  PR_DESCRIPTION.md  PR_SUMMARY.txt  PR_TEMPLATE.md  README.md  docker-compose.yml  pyproject.toml  solr.Dockerfile
config/: enhanced_mcp_config.json
data/processed/: bitcoin_sections.json
docs/: CODEBASE_SEARCH_EXAMPLES.md  HIGHLIGHTING_AND_STATS.md  INDEXING_FEATURES.md  INDEX_FRESHNESS_AND_INTEGRATION.md  INTEGRATION_TESTING.md  INTEGRATION_TESTING_SUMMARY.md  MAKE_TEST_ALL.md  MCP_TESTING.md  MIGRATION_UV_RUFF.md  SOLR_AS_SEARCH_ACCELERATOR.md  TERMS_AND_SCHEMA.md  TESTING.md  TESTING_QUICK_START.md
scripts/: benchmark_search_speed.py  check_solr.py  clever_codebase_queries.py  comprehensive_test.py  count_python_loc.py  create_test_collection.py  create_unified_collection.py  demo_hybrid_search.py  demo_search.py  diagnose_search.py  direct_mcp_test.py  fix_b904_complete.py  fix_critical_linting.py  fix_ruff_issues.sh  index_codebase.py  index_documents.py  prepare_data.py  process_markdown.py  query_python_files.py  run_full_integration_tests.sh  setup_claude_desktop.sh  setup_integration_tests.sh  simple_index.py  simple_mcp_test.py  simple_search.py  tech_debt_tracker.py  unified_index.py  unified_search.py  vector_index.py  vector_index_simple.py  vector_search.py  watch_and_index.py
solr_mcp/: server.py  utils.py
solr_mcp/solr/: __init__.py  client.py  collections.py  config.py  exceptions.py  interfaces.py  response.py  zookeeper.py
solr_mcp/solr/query/: __init__.py  builder.py  executor.py  parser.py  validator.py
solr_mcp/solr/schema/: __init__.py  cache.py  fields.py
solr_mcp/solr/utils/: __init__.py  formatting.py
solr_mcp/solr/vector/: __init__.py  manager.py  results.py
solr_mcp/tools/: __init__.py  base.py  codebase_statistics.py  fast_codebase_search.py  fast_file_find.py  solr_add_documents.py  solr_atomic_update.py  solr_commit.py  solr_default_vectorizer.py  solr_delete_documents.py  solr_list_collections.py  solr_list_fields.py  solr_query.py  solr_realtime_get.py  solr_schema_add_field.py  solr_schema_delete_field.py  solr_schema_get_field.py  solr_schema_list_fields.py  solr_select.py  solr_semantic_select.py  solr_terms.py  solr_vector_select.py  tool_decorator.py
solr_mcp/vector_provider/: __init__.py  constants.py  interfaces.py
solr_mcp/vector_provider/clients/: __init__.py  ollama.py
tests/e2e/: test_mcp_protocol.py
tests/integration/: test_direct_solr.py  test_indexing_tools.py  test_query_features.py  test_schema_tools.py
tests/unit/: conftest.py  test_cache.py  test_client.py  test_config.py  test_interfaces.py  test_query.py  test_schema.py  test_server.py  test_zookeeper.py
tests/unit/fixtures/: common.py  server_fixtures.py  solr_fixtures.py  vector_fixtures.py
tests/unit/solr/: test_client.py  test_client_indexing.py  test_collections.py  test_config.py  test_response.py
tests/unit/solr/query/: test_executor.py
tests/unit/solr/schema/: test_fields.py
tests/unit/solr/utils/: test_formatting.py
tests/unit/solr/vector/: test_manager.py  test_results.py
tests/unit/tools/: test_base.py  test_codebase_statistics.py  test_fast_codebase_search.py  test_fast_file_find.py  test_indexing_tools.py  test_init.py  test_solr_default_vectorizer.py  test_solr_indexing_features.py  test_solr_list_collections.py  test_solr_list_fields.py  test_solr_query.py  test_solr_schema_tools.py  test_solr_terms.py  test_tool_decorator.py  test_tools.py
tests/unit/vector_provider/: test_interfaces.py  test_ollama.py
